<resources>
    <string name="app_name">PoliAgenda</string>
    <!--Main activity-->
    <string name="Btn_Login">Log in</string>
    <string name="Btn_Registro">Registro</string>

    <!--Actividad Registro-->
    <string name="CrearCuentaTXT">Crear una cuenta</string>
    <string name="NombreET">Nombre</string>
    <string name="CorreoET">Correo electronico</string>
    <string name="ContraseñaET">Contraseña</string>
    <string name="ConfirmarContraseñaET">Confirmar Contraseña</string>
    <string name="RegistrarUsuario">Registrar Usuario</string>
    <string name="TengounacuentaTXT">Tengo una cuenta</string>
    <string name="title_activity_menu_principal">MenuPrincipal</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Log in failed"</string>
    <string name="title_activity_menu_princiapl">MenuPrinciapl</string>

    <!--ITEM CONTACTO-->
    <string name="Id_c_Item">Id contacto</string>
    <string name="Uid_c_Item">Uid usuario</string>
    <string name="nombres_c_Item">Nombres</string>
    <string name="apellidos_c_Item">Apellidos</string>
    <string name="correo_c_Item">Correo</string>
    <string name="telefono_c_Item">Telefono</string>
    <string name="edad_c_Item">Edad</string>
    <string name="direccion_c_Item">Direccion</string>

    <!--Actividad Login-->
    <string name="Login">Log in</string>
    <string name="Correo_electronico">Correo electronico</string>
    <string name="Contrase">Contraseña</string>

    <!--Menu Priciapl-->
    <string name="CerrarSesion">Salir</string>

    <string name="Bienvenido">Bienvenid@</string>
    <string name="NombrePirncipal">--</string>
    <string name="CorreoPrincipal">--</string>
    <string name="UidPrincipal">--</string>
    <string name="EstadoCuentaPrincipal">No verificado</string>

    <string name="AgregarNotas">Agregar</string>
    <string name="ListarNotas">Mis Notas</string>
    <string name="Referencia">Referencias</string>
    <string name="Horario">Horario</string>
    <string name="AcercaDe">Acerca De</string>

    <!--Agregar Nota-->
    <string name="Uid_Usuario">Uid del usuario</string>
    <string name="Correo_usuario">Correo del usuario</string>
    <string name="Fecha_hora_actual_TXT">Fecha de registro</string>
    <string name="Fecha_hora_actual">Fecha y hora actual</string>
    <string name="Titulo">Título</string>
    <string name="Descripcion">Descripcion</string>
    <string name="Btn_Calendario">Calendario</string>
    <string name="Fecha">00/00/0000</string>
    <string name="Estado">No finalizado</string>

    <!--MENU-->
    <string name="Agregar_Nota_BD">Agregar</string>
    <string name="Actualziar_Nota_BD">Actualizar</string>
    <string name="Perfil_usuario">Perfil del usuario</string>
    <string name="Agregar_contacto">Agregar contacto</string>

    <!--ITEM NOTA-->
    <string name="Id_nota_Item">Id nota</string>
    <string name="Uid_Usuario_Item">Uid del usuario</string>
    <string name="Correo_usuario_Item">Correo del usuario</string>
    <string name="Fecha_hora_registro_Item">Fecha y hora registro</string>
    <string name="Titulo_Item">Título</string>
    <string name="Descripcion_Item">Descripcion</string>
    <string name="Fecha_Item">00/00/0000</string>
    <string name="Estado_Item">No finalizado</string>

    <!--CUADRO DE DIALOGO OPCIONES-->
    <string name="EligaOpcionTXT">Elija una opcion</string>
    <string name="CD_Eliminar">Eliminar</string>
    <string name="CD_Actualizar">Actualizar</string>


    <!--Actualizar Nota-->
    <string name="Id_nota_A">Id nota</string>
    <string name="Uid_Usuario_A">Uid del usuario</string>
    <string name="Correo_usuario_A">Correo del usuario</string>
    <string name="Fecha_registro_A">Fecha de registro</string>
    <string name="Titulo_A">Título</string>
    <string name="Descripcion_A">Descripcion</string>
    <string name="Btn_Calendario_A">Calendario</string>
    <string name="Fecha_A">00/00/0000</string>
    <string name="Estado_A">No finalizado</string>
    <string name="Estado_nuevo">--</string>

    <!--Spinner Estado-->
    <string-array name="Estados_nota">
        <item>"No Finalizado"</item>
        <item>"Finalizado"</item>
    </string-array>

    <!--Detalle nota-->
    <string name="Id_nota_Detalle_TXT">Id de la nota: </string>
    <string name="Id_nota_Detalle">Id nota</string>
    <string name="Uid_usuario_Detalle_TXT">Uid de usuario: </string>
    <string name="Uid_usuario_Detalle">Uid usuario</string>
    <string name="Correo_usuario_Detalle_TXT">Correo de usuario: </string>
    <string name="Correo_usuario_Detalle">Correo usuario</string>
    <string name="Titulo_Detalle_TXT">Titulo: </string>
    <string name="Titulo_Detalle">Titulo</string>
    <string name="Descripcion_Detalle_TXT">Descripcion: </string>
    <string name="Descripcion_Detalle">Descripcion</string>
    <string name="Fecha_Registro_Detalle_TXT">Fecha registro: </string>
    <string name="Fecha_Registro_Detalle">Fecha registro</string>
    <string name="Fecha_Nota_Detalle_TXT">Fecha nota: </string>
    <string name="Fecha_Nota_Detalle">Fecha nota</string>
    <string name="Estado_Detalle_TXT">Estado de la nota: </string>
    <string name="Estado_Detalle">Estado</string>

    <!--PERFIL DE USUARIO-->
    <string name="Uid_Perfil">Uid</string>
    <string name="Nombres_Perfil">Mis nombres</string>
    <string name="Apellidos_Perfil">Mis apellidos</string>
    <string name="Correo_Perfil">Correo</string>
    <string name="Edad_Perfil">Edad</string>
    <string name="Telefono_Perfil">Telefono</string>
    <string name="Domicilio_Perfil">Domicilio</string>
    <string name="Universidad_Perfil">Universidad</string>
    <string name="Profresion_Perfil">Profesion</string>
    <string name="Guardar_Datos">Guardar datos</string>

    <!--Informacion de app-->
    <string name="Desarrolladores"> </string>
    <string name="Version">Version: 0.1</string>
    <string name="EntendidoInfo">Entendido</string>

    <!--Agregar Contacto-->
    <string name="Uid_Usuario_C">Mi uid</string>
    <string name="Nombres_C">Nombres contacto</string>
    <string name="Apellidos_C">Apellidos contacto</string>
    <string name="Correo_C">Correo electronico</string>
    <string name="Telefono_C">Telefono</string>
    <string name="Edad_C">Edad</string>
    <string name="Direccion_C">Direccion</string>
    <string name="Btn_Guardar_Contacto">Guardar contacto</string>


    <!--Prueba-->

    //pasta
    <string name="pastaIngredients">Pasta
\nCream Cheese
\nParmesan Cheese
\nOlive Oil
\nGarlic
\nSalt Pepper</string>
    <string name="pastaDesc">Cook your pasta until al dente
\nSaute’ garlic in olive oil until fragrant
\nAdd cream cheese, pasta cooking water, parmesan, and stir well
\nDrain and add pasta to the skillet
\nToss until well combined, adding some pasta water if needed</string>
    //maggi
    <string name="maggiIngredients">Maggi Noodles
\nWater
\nMaggi Masala</string>
    <string name="maggieDesc">Add one and half cup of water
\nAdd maggi noodles and boil it
\nAdd the maggi masala on to it
\nWait for 2 mins
\nMaggi is ready!</string>
    //cake
    <string name="cakeIngredients">Maggi Noodles
\nWater
\nMaggi Masala</string>
    <string name="cakeDesc">Add one and half cup of water
Add maggi noodles and boil it
Add the maggi masala on to it
\nWait for 2 mins
\nMaggi is ready!</string>
    //pancake
    <string name="pancakeIngredients">Maggi Noodles
\nWater
\nMaggi Masala</string>
    <string name="pancakeDesc">Add one and half cup of water
Add maggi noodles and boil it
Add the maggi masala on to it
\nWait for 2 mins
\nMaggi is ready!</string>
    //pizza
    <string name="pizzaIngredients">Maggi Noodles
\nWater
\nMaggi Masala</string>
    <string name="pizzaDesc">Add one and half cup of water
Add maggi noodles and boil it
Add the maggi masala on to it
\nWait for 2 mins
\nMaggi is ready!</string>
    //burgers
    <string name="burgerIngredients">Maggi Noodles
\nWater
\nMaggi Masala</string>
    <string name="burgerDesc">Add one and half cup of water
\nAdd maggi noodles and boil it
\nAdd the maggi masala on to it
\nWait for 2 mins
\nMaggi is ready!</string>
    //fries
    <string name="friesIngredients">Maggi Noodles
\nWater
\nMaggi Masala</string>
    <string name="friesDesc">Add one and half cup of water
\nAdd maggi noodles and boil it
\nAdd the maggi masala on to it
\nWait for 2 mins
\nMaggi is ready!</string>

</resources>
