<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardUseCompatPadding="true"
    android:padding="0.2dp"
    app:cardCornerRadius="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:padding="5dp">

        <!--Icono-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:src="@drawable/icono_item_nota">

            </androidx.appcompat.widget.AppCompatImageView>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="7dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Id_nota_Item"
                android:id="@+id/Id_nota_Item"
                android:visibility="gone">

            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Uid_Usuario_Item"
                android:id="@+id/Uid_Usuario_Item"
                android:visibility="gone">

            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Correo_usuario_Item"
                android:id="@+id/Correo_usuario_Item"
                android:visibility="gone">

            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Fecha_hora_registro_Item"
                android:id="@+id/Fecha_hora_registro_Item"
                android:visibility="gone">

            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Titulo_Item"
                android:id="@+id/Titulo_Item"
                android:textSize="25sp"
                android:textStyle="bold">

            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/Descripcion_Item"
                android:id="@+id/Descripcion_Item"
                android:textSize="18sp">

            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Fecha_Item"
                android:id="@+id/Fecha_Item"
                android:textSize="18sp">

            </TextView>

            <!--Estado de la nota-->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/Tarea_Finalizada_Item"
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_gravity="center"
                    android:visibility="gone"
                    android:background="#16A085">

                </androidx.appcompat.widget.AppCompatImageView>

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/Tarea_No_Finalizada_Item"
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_gravity="center"
                    android:visibility="gone"
                    android:layout_marginStart="5dp"
                    android:background="#E74C3C">

                </androidx.appcompat.widget.AppCompatImageView>

                <TextView
                    android:textSize="20sp"
                    android:layout_marginStart="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Estado_Item"
                    android:id="@+id/Estado_Item">

                </TextView>

            </androidx.appcompat.widget.LinearLayoutCompat>


        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.cardview.widget.CardView>