<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Detalle.Detalle_Nota">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:padding="5dp">

        <!--ICONO TEXT VIEW ID NOTA-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!--ICONO-->
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/id_nota_detalle">

            </androidx.appcompat.widget.AppCompatImageView>

            <!--TEXTO-->
            <TextView
                android:text="@string/Id_nota_Detalle_TXT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:layout_marginStart="10dp">

            </TextView>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <!--DATOS ID NOTA-->
        <TextView
            android:id="@+id/Id_nota_Detalle"
            android:text="@string/Id_nota_Detalle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_gravity="center">

        </TextView>

        <!--ICONO TEXT VIEW UID USUARIO-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <!--ICONO-->
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/uid_usuario_detalle">

            </androidx.appcompat.widget.AppCompatImageView>

            <!--TEXTO-->
            <TextView
                android:text="@string/Uid_usuario_Detalle_TXT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:layout_marginStart="10dp">

            </TextView>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <!--DATOS UID USUARIO-->
        <TextView
            android:id="@+id/Uid_usuario_Detalle"
            android:text="@string/Uid_usuario_Detalle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_gravity="center">

        </TextView>

        <!--ICONO TEXT VIEW CORREO USUARIO-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <!--ICONO-->
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/correo_usuario_detalle">

            </androidx.appcompat.widget.AppCompatImageView>

            <!--TEXTO-->
            <TextView
                android:text="@string/Correo_usuario_Detalle_TXT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:layout_marginStart="10dp">

            </TextView>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <!--DATOS CORREO USUARIO-->
        <TextView
            android:id="@+id/Correo_usuario_Detalle"
            android:text="@string/Correo_usuario_Detalle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_gravity="center">

        </TextView>

        <!--ICONO TEXT VIEW TITULO-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <!--ICONO-->
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/titulo_nota_detalle">

            </androidx.appcompat.widget.AppCompatImageView>

            <!--TEXTO-->
            <TextView
                android:text="@string/Titulo_Detalle_TXT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:layout_marginStart="10dp">

            </TextView>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <!--DATOS TITULO-->
        <TextView
            android:id="@+id/Titulo_Detalle"
            android:text="@string/Titulo_Detalle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_gravity="center">

        </TextView>

        <!--ICONO TEXT VIEW DESCRIPCION-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <!--ICONO-->
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/descripcion_nota_detalle">

            </androidx.appcompat.widget.AppCompatImageView>

            <!--TEXTO-->
            <TextView
                android:text="@string/Descripcion_Detalle_TXT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:layout_marginStart="10dp">

            </TextView>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <!--DATOS DESCRIPCION-->
        <TextView
            android:id="@+id/Descripcion_Detalle"
            android:text="@string/Descripcion_Detalle"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_gravity="center">

        </TextView>

        <!--ICONO TEXT VIEW FECHA REGISTRO-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <!--ICONO-->
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/fecha_registro_nota_detalle">

            </androidx.appcompat.widget.AppCompatImageView>

            <!--TEXTO-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:layout_marginStart="10dp"
                android:text="@string/Fecha_Registro_Detalle_TXT">

            </TextView>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <!--DATOS FECHA REGISTRO-->
        <TextView
            android:id="@+id/Fecha_Registro_Detalle"
            android:text="@string/Fecha_Registro_Detalle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_gravity="center">

        </TextView>

        <!--ICONO TEXT VIEW FECHA NOTA-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <!--ICONO-->
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/fecha_nota_detalle">

            </androidx.appcompat.widget.AppCompatImageView>

            <!--TEXTO-->
            <TextView
                android:text="@string/Fecha_Nota_Detalle_TXT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:layout_marginStart="10dp">

            </TextView>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <!--DATOS FECHA NOTA-->
        <TextView
            android:id="@+id/Fecha_Nota_Detalle"
            android:text="@string/Fecha_Nota_Detalle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_gravity="center">

        </TextView>

        <!--ICONO TEXT VIEW ESTADO-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <!--ICONO-->
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/estado_detalle">

            </androidx.appcompat.widget.AppCompatImageView>

            <!--TEXTO-->
            <TextView
                android:text="@string/Estado_Detalle_TXT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:layout_marginStart="10dp">

            </TextView>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <!--DATOS ESTADO-->
        <TextView
            android:id="@+id/Estado_Detalle"
            android:text="@string/Estado_Detalle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_gravity="center">

        </TextView>


    </androidx.appcompat.widget.LinearLayoutCompat>
    
    
</ScrollView>